--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.3.0.css">
 		<script src="cordova.ios.js"></script>
-		<script src="http://debug.phonegap.com/target/target-script-min.js#joenaber"></script>
-		<script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>
+		<!--<script src="http://debug.phonegap.com/target/target-script-min.js#joenaber"></script>-->
+		<!--<script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>-->
 		<script>
             /* INITIALIZE */
 			function init(){
