--- a/index.html
+++ b/index.html
@@ -10,65 +10,58 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.3.0.css">
 		<script src="cordova.ios.js"></script>
+		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+	<link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
+
 		<!--<script src="http://debug.phonegap.com/target/target-script-min.js#joenaber"></script>-->
 		<!--<script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>-->
 		<script>
             /* INITIALIZE */
+			var lat, lon;
 			function init(){
 				document.addEventListener("deviceready", onDeviceReady, false);
 			}
-
-			/* ON READY */
-			function onDeviceReady() {
-			    alert('your files have been deleted');
-			    $('#devicename').html("dummy device name (proof of working jquery)");
-			    $('#devicename').html(device.name);
-			    $('#devicephonegap').html(device.phonegap);
-			    $('#deviceplatform').html(device.platform);
-			    $('#deviceuuid').html(device.uuid);
-			    $('#deviceversion').html(device.version);
-
-			    var wId = navigator.accelerometer.watchAcceleration(onSuccess, onError, {frequency: 1000});/*sets a watch id on accelerometer with a frequency callback*/
-			        
-			    navigator.camera.getPicture(onSuccessCam, onErrorCam, { quality: 50, destinationType: Camera.DestinationType.FILE_URI});   
-			    navigator.geolocation.watchPosition(onSuccessGeo, onErrorGeo, { frequency: 5000});
-
-				var networkstate = navigator.connection.type;
-				alert (networkstate);
-				if (networkstate == "none"){
-					$(".offline").css("visibility","visible");
+			
+		function onDeviceReady(){
+			var networkstate = navigator.connection.type;
+			if (networkstate == "none"){
+				$('.offline').css("visibility","visible");
 				}
 			}
-
-		    /* ACCELEROMETER */
-			function onSuccess(a){
-			    $('aX').html(a.x);
-			    $('aY').html(a.y);
-			    $('aZ').html(a.z);
-			    $('aTime').html(a.timestamp);
-			}
-			function onError(){
 			
-			}
-
-            /* CAMERA */
-			function onSuccessCam(fileUri){
-			    $('#imageuri').html(fileUri);
-			    
-			}
-			function onErrorCam(){
+		function onGeoSuccess(position) {
+			lat = position.coords.latitude;
+			lon = position.coords.longitude;
+			var currentposition = new google.maps.LatLng(lat,lon);
 			
-			}
-
-		    /* GEOLOCATION */
-			function onSuccessGeo(p){
-			    $('#lat').html(p.coords.latitude);
-			    $('#lon').html(p.coords.longitude);
-			}
-			function onErrorGeo(){
+			var mapoptions = {
+				zoom: 12,
+				center: currentposition,
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			};
 			
-			}
+			var map = new google.maps.Map(document.getElementById("map"), mapoptions);
+			
 
+			var marker = new google.maps.Marker({
+					position: currentposition,
+					map: map
+			});
+		}
+			
+		function onGeoError(error){
+			if (error == 1){
+				alert('turn on geolocation services');
+			}
+		}
+
+			
+		function showGeo(){
+			navigator.geolocation.getCurrentPosition(onGeoSuccess, onGeoError)
+		}
+			
+			
+			
 		</script>
 	</head>
 	<body onload="init()">
@@ -196,9 +189,10 @@
                     </ul>
                 </div>
                 <h1>GeoLocation</h1>
-				<button onclick="onDeviceReady()">fire device ready</button>
+				<button onclick="showGeo()">showGeo</button>
                 <p id="lat"></p>
                 <p id="lon"></p>
+				<div id="map"></div>
             </div>
 			<div data-role="footer" data-theme="c">
 				<h2 class="offline">Offline Mode</h2>
