--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			
 		function showGeo(){
-			navigator.geolocation.getCurrentPosition(onGeoSuccess, onGeoError)
+		    navigator.geolocation.getCurrentPosition(onGeoSuccess, onGeoError);
 		}
 			
 		function showProperties() {
