div changes from vs copy paste
derrrr

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
             </div>
             <div data-role="content">
                 <button onclick="showGeo()">showGeo</button>
-                <p id="P1"></p>
-                <p id="P2"></p>
-                <div id="Div1"></div>
+                <p id="lat"></p>
+                <p id="lon"></p>
+                <div id="map"></div>
                 <button onclick="openWindow()">in-App browser BLOG</button>
                 <button onclick="showProperties()">Show Device Properties</button>
-                <div id="Div2">  </div>
+                <div id="properties">  </div>
             </div>
             <div data-role="footer" data-position="fixed">
                 <div data-role="navbar">
