--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.mobile-1.3.0.js"></script>
+        <script type='text/javascript' src='js/knockout.js'></script>
 		<title>jobFinder</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.3.0.css">
@@ -65,7 +66,7 @@
 			
 		function showProperties() {
 			var element = document.getElementById('properties');
-			element.innerHTML = 'Device Name: '     + device.name     + '<br />' + 
+			element.innerHTML = 'Device Name: '     + device.model     + '<br />' + 
 							   'Device PhoneGap: ' + device.phonegap + '<br />' + 
 								'Device Platform: ' + device.platform + '<br />' + 
 								'Device UUID: '     + device.uuid     + '<br />' + 
@@ -77,7 +78,12 @@
 		}
 
 
-	
+		$(function () {
+		    var viewModel = {
+		        name: ko.observable("Sneak up on your dream job*"),
+		    };
+		    ko.applyBindings(viewModel);
+		});
 
 		</script>
 	</head>
@@ -89,6 +95,7 @@
                 <a href="#contact" data-role="button" data-icon="star">Contact Us</a>
             </div>
             <div data-role="content">
+                <h3><span data-bind="text: name"></span></h3>
                 <ul data-role="listview" data-filter="true">
                     <li>Mechanical Engineer</li>
                     <li>Web Developer</li>
